--- a/Assets/UI/Splash/SplashScreen.uxml
+++ b/Assets/UI/Splash/SplashScreen.uxml
@@ -1,5 +1,5 @@
-<ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
-    <Style src="project://database/Assets/UI/Splash/Editor/SplashScreen.uss?fileID=7433441132597879392&amp;guid=501eb9804024844f38ba5b0b5029f893&amp;type=3#SplashScreen" />
+<ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="True">
+    <Style src="project://database/Assets/UI/Splash/SplashScreen.uss?fileID=7433441132597879392&amp;guid=501eb9804024844f38ba5b0b5029f893&amp;type=3#SplashScreen" />
     <ui:VisualElement class="mainScreen">
         <ui:VisualElement name="LogoContainer" class="logoContainer" />
     </ui:VisualElement>
